[#320] Fix control div alignment

--- a/beta-prototype/supplier/static/css/pages/supplier/add-edit-solution.css
+++ b/beta-prototype/supplier/static/css/pages/supplier/add-edit-solution.css
@@ -206,3 +206,11 @@
   color: var(--color-nhs-blue);
   text-decoration: none;
 }
+
+#add-edit-solution .controls {
+  margin-top: 1em;
+}
+
+#add-edit-solution .controls .primary {
+  float: right;
+}
