--- a/beta-prototype/supplier/static/css/pages/supplier/solution-capabilities.css
+++ b/beta-prototype/supplier/static/css/pages/supplier/solution-capabilities.css
@@ -323,6 +323,10 @@
   display: inline;
 }
 
+#solution-capabilities .controls {
+  margin-top: 1em;
+}
+
 #solution-capabilities .controls .primary {
   float: right;
 }
